# ai-coder

./: CLAUDE.md  Cargo.toml  README.md
benches/: token_counting.rs
src/: app.rs  event.rs  lib.rs  main.rs  tui.rs  util.rs
src/ai/: factory.rs  mod.rs  ollama.rs  types.rs
src/app/: ai_handler.rs
src/config/: mod.rs
src/handlers/: ai.rs  bash.rs  command.rs  mod.rs
src/mode/: ai.rs  bash.rs  command.rs  mod.rs
src/ui/: components.rs  mod.rs  theme.rs
src/utils/: format.rs  logging.rs  mod.rs  tasks.rs
tests/: utils_test.rs
