[package]
name = "ai-coder-interface-rs"
version = "0.1.0"
edition = "2021"
authors = ["Suyash Bhawsar <suyashbhawsar@outlook.com>"]
description = "A TUI application for interacting with LLMs"
repository = "https://github.com/yourusername/ai-coder-interface-rs"
readme = "README.md"
keywords = ["ai", "llm", "terminal", "tui"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# TUI and terminal handling
ratatui = "0.24.0"
crossterm = "0.27.0"
tui-input = "0.8.0"

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# Command execution
shell-words = "1.1.0"
walkdir = "2.4.0"

# Utility crates
chrono = "0.4.26"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9"
dirs = "5.0.1"
regex = "1.9.5"
log = "0.4.20"
simplelog = "0.12.1"
thiserror = "1.0.48"
anyhow = "1.0.75"
unicode-width = "0.1.10"
rand = "0.8.5"
clipboard = "0.5.0"
lazy_static = "1.4.0"

# AI and HTTP
reqwest = { version = "0.11.18", features = ["json"] }
async-trait = "0.1.74"
once_cell = "1.19"
spinners = "4.1.1"
strum = { version = "0.25", features = ["derive"] }
rustc_version_runtime = "0.3.0"

[dev-dependencies]
mockall = "0.11.4"
tempfile = "3.7.0"
criterion = "0.5.1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0

[[bench]]
name = "token_counting"
harness = false
